--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
     </section>
     <!-- about us\ -->
     <section id="about us" class="h-screen w-full flex flex-col">
-      <div class="h-[60%] w-[100%]">
+      <div class="h-[50%] w-[100%]">
         <img
           class="w-full h-[100%]"
           src="https://s3-alpha-sig.figma.com/img/9e12/3cfd/9e666da75a17581babef21148562f635?Expires=1675036800&Signature=djVLLUixQrnVx4VnM5NoaJjZKzwzwj5m5WcwtlpoVGO0gUGlfkI0kj1gN5hLzoQqKoFyR-2o7MD86p3UHfelm-Tg67xWnJbMO1qFdCIg68HqYGkbgLSk0mTWUXUISdbNxYdrZoL3r3Nf5YMGorEpjqa7g2t0l5o0gIvpjywbMBxYgBn69XWxpS4rvg8CXyeLdbnttsslIOmnMezYWi9Txof3HEf8zzsAtjAaBA5HAZNsLSQUG0Y41pveONRJuc9dMQmAvT87~w3rBYdzyXC3WWcE3o2Ahnm~KtGIolyFQVLCCL-47jSrhtuRMFbwI5F-bTVz1TulLb5JRkRYtMGlMA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
           alt=""
         />
       </div>
-      <div class="h-[40%] w-[100%] flex">
-        <div class="w-[50%] h-[100%] font-[700] text-[50px] p-[50px] px-[120px] ">Turn your brand into something that sticks 😎</div>
+      <div class="h-[50%] w-[100%] flex">
+        <div class="w-[50%] h-[100%] font-[500] text-[50px] p-[50px] px-[120px] ">Turn your brand into something that sticks 😎</div>
         <div class="w-[50%] h-[100%]">
           <p  class="w-[80%] mt-[50px]">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat
@@ -81,6 +81,15 @@
           </p>
         </div>
       </div>
+    </section>
+    <!-- services -->
+    <section id="services" class="h-screen w-full flex justify-center items-center">
+        <div class="div1 h-[80%] w-[50%]">
+            <h1 class="">SERVICES</h1>
+        </div>
+        <div class="w-[50%] h-[80%]">
+            <img src="https://s3-alpha-sig.figma.com/img/697f/ed08/e0d481e5053b9c1c3d96f744b92d4561?Expires=1675036800&Signature=aZEjabMhFc6rxwHgIeAZOyawMf~xIIKmvYCcAf6J0GkfX3LiAQzxkyIba0RWGSSnBvAvbi6UAO5RkYCDqcoiZ5yW31oFzrBCrkArE1PLcVLELQGlUGK0gWfBtKV7FHAcPEkyly~3tI3OW6UGy5R597e6ZVSeurM7eUTY11O8sDFeZCm7rQIbI6Tlw74u3wdGzMWHCQWEHw~U10DKNyLBRMiaJ17OAbSBu~1yhghMFRGtEa0dsdiwic8Ii8HU25Ew3I8GDGA2j0NLEV4FURZjhNHXwQ5EmrTW5rCeObwO~LqNAtKewBptXnfyO5WavAfkLBvTPzD2b2aCj-x5Z~u7-Q__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="">
+        </div>
     </section>
   </body>
 </html> 
