--- a/index.html
+++ b/index.html
@@ -84,8 +84,13 @@
     </section>
     <!-- services -->
     <section id="services" class="h-screen w-full flex justify-center items-center">
-        <div class="div1 h-[80%] w-[50%]">
+        <div class="div1 h-[80%] w-[50%] flex flex-col justify-center items-start p-[50px]">
             <h1 class="">SERVICES</h1>
+            <h4 class="text-[34px] my-[5px]">01 Video Editing</h4>
+            <h4 class="text-[34px] my-[5px]">02 Content Creation</h4>
+            <h2 class="text-[64px] my-[5px]">03 Social Media</h2>
+            <h4 class="text-[34px] my-[5px]">04 YouTube Marketing</h4>
+            <h4 class="text-[34px] my-[5px]">Web Design</h4>
         </div>
         <div class="w-[50%] h-[80%]">
             <img src="https://s3-alpha-sig.figma.com/img/697f/ed08/e0d481e5053b9c1c3d96f744b92d4561?Expires=1675036800&Signature=aZEjabMhFc6rxwHgIeAZOyawMf~xIIKmvYCcAf6J0GkfX3LiAQzxkyIba0RWGSSnBvAvbi6UAO5RkYCDqcoiZ5yW31oFzrBCrkArE1PLcVLELQGlUGK0gWfBtKV7FHAcPEkyly~3tI3OW6UGy5R597e6ZVSeurM7eUTY11O8sDFeZCm7rQIbI6Tlw74u3wdGzMWHCQWEHw~U10DKNyLBRMiaJ17OAbSBu~1yhghMFRGtEa0dsdiwic8Ii8HU25Ew3I8GDGA2j0NLEV4FURZjhNHXwQ5EmrTW5rCeObwO~LqNAtKewBptXnfyO5WavAfkLBvTPzD2b2aCj-x5Z~u7-Q__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="">
