--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="index.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
@@ -26,7 +33,7 @@
         <div><img src="../Mflux/assets/logo1.png" alt="" /></div>
         <div>
           <button
-            class="border-[3px] rounded-[150px] p-[5px] h-[40px] w-[150px] text-white"
+            class="border-[3px] rounded-[150px] p-[5px] h-[40px] w-[150px] border-white text-white"
           >
             Book a Call
           </button>
@@ -65,9 +72,13 @@
         />
       </div>
       <div class="h-[50%] w-[100%] flex">
-        <div class="w-[50%] h-[100%] font-[500] text-[50px] p-[50px] px-[120px] ">Turn your brand into something that sticks 😎</div>
+        <div
+          class="w-[50%] h-[100%] font-[500] text-[50px] p-[50px] px-[120px]"
+        >
+          Turn your brand into something that sticks 😎
+        </div>
         <div class="w-[50%] h-[100%]">
-          <p  class="w-[80%] mt-[50px]">
+          <p class="w-[80%] mt-[50px]">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat
             enim semper nibh lorem sapien. Commodo aliquam ipsum, diam luctus
             id. Nisi, consectetur metus nisi lorem dis ut eu. Eget sit habitasse
@@ -83,18 +94,92 @@
       </div>
     </section>
     <!-- services -->
-    <section id="services" class="h-screen w-full flex justify-center items-center">
-        <div class="div1 h-[80%] w-[50%] flex flex-col justify-center items-start p-[50px]">
-            <h1 class="mb-[10px]">SERVICES</h1>
-            <h4 class="text-[34px] my-[10px]">01 Video Editing</h4>
-            <h4 class="text-[34px] my-[10px]">02 Content Creation</h4>
-            <h2 class="text-[64px] my-[10px]">03 Social Media</h2>
-            <h4 class="text-[34px] my-[10px]">04 YouTube Marketing</h4>
-            <h4 class="text-[34px] my-[10px]">Web Design</h4>
+    <section
+      id="services"
+      class="h-screen w-full flex justify-center items-center"
+    >
+      <div
+        class="div1 h-[80%] w-[50%] flex flex-col justify-center items-start p-[50px]"
+      >
+        <h1 class="mb-[10px]">SERVICES</h1>
+        <h4 class="text-[34px] my-[10px]">01 Video Editing</h4>
+        <h4 class="text-[34px] my-[10px]">02 Content Creation</h4>
+        <h2 class="text-[64px] my-[10px]">03 Social Media</h2>
+        <h4 class="text-[34px] my-[10px]">04 YouTube Marketing</h4>
+        <h4 class="text-[34px] my-[10px]">Web Design</h4>
+      </div>
+      <div class="w-[50%] h-[80%]">
+        <img
+          src="https://s3-alpha-sig.figma.com/img/697f/ed08/e0d481e5053b9c1c3d96f744b92d4561?Expires=1675036800&Signature=aZEjabMhFc6rxwHgIeAZOyawMf~xIIKmvYCcAf6J0GkfX3LiAQzxkyIba0RWGSSnBvAvbi6UAO5RkYCDqcoiZ5yW31oFzrBCrkArE1PLcVLELQGlUGK0gWfBtKV7FHAcPEkyly~3tI3OW6UGy5R597e6ZVSeurM7eUTY11O8sDFeZCm7rQIbI6Tlw74u3wdGzMWHCQWEHw~U10DKNyLBRMiaJ17OAbSBu~1yhghMFRGtEa0dsdiwic8Ii8HU25Ew3I8GDGA2j0NLEV4FURZjhNHXwQ5EmrTW5rCeObwO~LqNAtKewBptXnfyO5WavAfkLBvTPzD2b2aCj-x5Z~u7-Q__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+          alt=""
+        />
+      </div>
+    </section>
+    <!-- contact us -->
+    <section
+      id="contact"
+      class="h-[110vh] w-full flex justify-center items-center flex-col"
+    >
+      <div class="h-[30vh] w-full"></div>
+      <div class="div2 h-[80vh] w-full"></div>
+      <div class="form h-80vh w-[80vw] bg-white flex flex-col">
+        <div class="h-[70%] w-[60%] text-[64px] font-700 mb-[30px] ml-[10%] mt-[2%] mb-[5%]">
+          Love to hear from you, Get in Touch 👋
         </div>
-        <div class="w-[50%] h-[80%]">
-            <img src="https://s3-alpha-sig.figma.com/img/697f/ed08/e0d481e5053b9c1c3d96f744b92d4561?Expires=1675036800&Signature=aZEjabMhFc6rxwHgIeAZOyawMf~xIIKmvYCcAf6J0GkfX3LiAQzxkyIba0RWGSSnBvAvbi6UAO5RkYCDqcoiZ5yW31oFzrBCrkArE1PLcVLELQGlUGK0gWfBtKV7FHAcPEkyly~3tI3OW6UGy5R597e6ZVSeurM7eUTY11O8sDFeZCm7rQIbI6Tlw74u3wdGzMWHCQWEHw~U10DKNyLBRMiaJ17OAbSBu~1yhghMFRGtEa0dsdiwic8Ii8HU25Ew3I8GDGA2j0NLEV4FURZjhNHXwQ5EmrTW5rCeObwO~LqNAtKewBptXnfyO5WavAfkLBvTPzD2b2aCj-x5Z~u7-Q__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="">
+        <div class="w-full h-[70%] flex justify-center items-start">
+          <div class="h-[full w-[40%] flex flex-col ml-[10%] mb-[5%]">
+            <input
+              class="my-[30px] h-[40px] w-[350px] mx-[20px] border-b-[2px] border-black p-[5px]"
+              type="text"
+              name="name"
+              placeholder="Name"
+            />
+            <input
+              class="my-[30px] h-[40px]  w-[350px] mx-[20px] border-b-[2px] border-black p-[5px]"
+              type="text"
+              name="Company name"
+              placeholder="Company name"
+            />
+            <input
+              class="my-[30px] h-[40px] w-[350px] mx-[20px] border-b-[2px] border-black p-[5px]"
+              type="text"
+              name="Message"
+              placeholder="Message"
+            />
+            <button class="text-white bg-black h-[50px] w-[350px] mx-[20px] my-[30px]">
+              Send Message <i class="fa-solid fa-paper-plane"></i>
+            </button>
+          </div>
+          <div class="h-[100%] w-[50%] flex flex-col items-start ">
+            <input
+              class="my-[30px] h-[40px] w-[350px] mx-[20px] border-b-[2px] border-black p-[5px]"
+              type="email"
+              name="email"
+              placeholder="Email"
+            />
+            <input
+              class="my-[30px] h-[40px] w-[350px] mx-[20px] border-b-[2px] border-black p-[5px]"
+              type="text"
+              name="project"
+              placeholder="Project Type"
+            />
+          </div>
         </div>
+      </div>
+    </section>
+    <!-- footer -->
+    <section id="footer" class="h-[200px] w-full bg-white flex justify-between">
+      <div> 
+        <img class="ml-[55%] bg-cover"
+          src="../Mflux/assets/Screenshot_2023-01-19_120707-removebg-preview.png"
+          alt=""
+        />
+      </div>
+      <div class="text-[34px] mr-[130px] mt-[30px]">
+        <i class="fa-brands fa-facebook-f p-[15px]"></i>
+        <i class="fa-brands fa-instagram p-[15px]"></i>
+        <i class="fa-brands fa-twitter p-[15px]"></i>
+      </div>
     </section>
   </body>
-</html> 
+</html>
