--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
       class="flex h-full w-[100%] bg-no-repeat bg-cover flex justify-between items-center flex-col"
     >
       <div
-        class="w-[1300px] h-[100px] mt-[20px] flex justify-between items-center"
+        class="w-[85%] h-[100px] mt-[20px] flex justify-between items-center"
       >
-        <div><img src="../Mflux/assets/logo1.png" alt="" /></div>
-        <div>
-          <button
-            class="border-[3px] rounded-[150px] p-[5px] h-[40px] w-[150px] border-white text-white"
+        <div  >
+          <img src="../Mflux/assets/Group 8logo2.png" width="48px" height="42px" alt="">
+        </div>
+        <div class="display:hidden md:display:block">
+          <button 
+            class=" border-[3px] rounded-[150px] p-[5px] h-[40px] w-[150px] border-white text-white"
           >
             Book a Call
           </button>
@@ -67,25 +69,25 @@
       <div class="h-[50%] w-[100%]">
         <img
           class="w-full h-[100%]"
-          src="https://s3-alpha-sig.figma.com/img/9e12/3cfd/9e666da75a17581babef21148562f635?Expires=1675036800&Signature=djVLLUixQrnVx4VnM5NoaJjZKzwzwj5m5WcwtlpoVGO0gUGlfkI0kj1gN5hLzoQqKoFyR-2o7MD86p3UHfelm-Tg67xWnJbMO1qFdCIg68HqYGkbgLSk0mTWUXUISdbNxYdrZoL3r3Nf5YMGorEpjqa7g2t0l5o0gIvpjywbMBxYgBn69XWxpS4rvg8CXyeLdbnttsslIOmnMezYWi9Txof3HEf8zzsAtjAaBA5HAZNsLSQUG0Y41pveONRJuc9dMQmAvT87~w3rBYdzyXC3WWcE3o2Ahnm~KtGIolyFQVLCCL-47jSrhtuRMFbwI5F-bTVz1TulLb5JRkRYtMGlMA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-          alt=""
+          src="../Mflux/assets/Rectangle 19 (1).png"
+          alt="" height="512" width="1440"
         />
       </div>
       <div class="h-[50%] w-[100%] flex">
         <div
-          class="w-[50%] h-[100%] font-[500] text-[50px] p-[50px] px-[120px]"
+          class="w-[50%] h-[100%] font-[500] text-[50px] p-[50px] px-[170px]"
         >
           Turn your brand into something that sticks 😎
         </div>
         <div class="w-[50%] h-[100%]">
-          <p class="w-[80%] mt-[50px]">
+          <p class="w-[80%] mt-[50px] pt-[10px] px-[110px]">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat
             enim semper nibh lorem sapien. Commodo aliquam ipsum, diam luctus
             id. Nisi, consectetur metus nisi lorem dis ut eu. Eget sit habitasse
             phasellus a faucibus amet, non. Adipiscing tortor mi pellentesque
             vitae arcu est, risus, vitae.
           </p>
-          <p class="w-[80%] mt-[50px]">
+          <p class="w-[80%] mt-[50px] py-[0px] px-[110px]">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat
             enim semper nibh lorem sapien. Commodo aliquam ipsum, diam luctus
             id.
@@ -96,12 +98,10 @@
     <!-- services -->
     <section
       id="services"
-      class="h-screen w-full flex justify-center items-center"
+      class="h-[110vh] w-full flex justify-center items-center "
     >
-      <div
-        class="div1 h-[80%] w-[50%] flex flex-col justify-center items-start p-[50px]"
-      >
-        <h1 class="mb-[10px]">SERVICES</h1>
+      <div class="div1 h-[80%] w-[50%] flex flex-col justify-center items-start p-[50px]">
+        <img src="./assets/SERVICES.png" class="img1" alt="">
         <h4 class="text-[34px] my-[10px]">01 Video Editing</h4>
         <h4 class="text-[34px] my-[10px]">02 Content Creation</h4>
         <h2 class="text-[64px] my-[10px]">03 Social Media</h2>
@@ -110,7 +110,7 @@
       </div>
       <div class="w-[50%] h-[80%]">
         <img
-          src="https://s3-alpha-sig.figma.com/img/697f/ed08/e0d481e5053b9c1c3d96f744b92d4561?Expires=1675036800&Signature=aZEjabMhFc6rxwHgIeAZOyawMf~xIIKmvYCcAf6J0GkfX3LiAQzxkyIba0RWGSSnBvAvbi6UAO5RkYCDqcoiZ5yW31oFzrBCrkArE1PLcVLELQGlUGK0gWfBtKV7FHAcPEkyly~3tI3OW6UGy5R597e6ZVSeurM7eUTY11O8sDFeZCm7rQIbI6Tlw74u3wdGzMWHCQWEHw~U10DKNyLBRMiaJ17OAbSBu~1yhghMFRGtEa0dsdiwic8Ii8HU25Ew3I8GDGA2j0NLEV4FURZjhNHXwQ5EmrTW5rCeObwO~LqNAtKewBptXnfyO5WavAfkLBvTPzD2b2aCj-x5Z~u7-Q__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+          src="./assets/Rectangle 10.png"
           alt=""
         />
       </div>
@@ -121,12 +121,12 @@
       class="h-[110vh] w-full flex justify-center items-center flex-col"
     >
       <div class="h-[30vh] w-full"></div>
-      <div class="div2 h-[80vh] w-full"></div>
-      <div class="form h-80vh w-[80vw] bg-white flex flex-col">
-        <div class="h-[70%] w-[60%] text-[64px] font-700 mb-[30px] ml-[10%] mt-[2%] mb-[5%]">
+      <div class="div2 h-[100%] w-full "></div>
+      <div class="form h-30vh w-[80vw] bg-white flex flex-col">
+        <div class="h-[60%] w-[60%] text-[64px] font-700 mb-[10px] ml-[10%] mt-[2%] mb-[2%]">
           Love to hear from you, Get in Touch 👋
         </div>
-        <div class="w-full h-[70%] flex justify-center items-start">
+        <div class="w-full h-[30%] flex justify-center items-start">
           <div class="h-[full w-[40%] flex flex-col ml-[10%] mb-[5%]">
             <input
               class="my-[30px] h-[40px] w-[350px] mx-[20px] border-b-[2px] border-black p-[5px]"
@@ -146,7 +146,7 @@
               name="Message"
               placeholder="Message"
             />
-            <button class="text-white bg-black h-[50px] w-[350px] mx-[20px] my-[30px]">
+            <button class="text-white bg-black h-[50px] w-[350px] mx-[20px] my-[10px]">
               Send Message <i class="fa-solid fa-paper-plane"></i>
             </button>
           </div>
@@ -169,11 +169,14 @@
     </section>
     <!-- footer -->
     <section id="footer" class="h-[200px] w-full bg-white flex justify-between">
-      <div> 
+      <div> <div>
         <img class="ml-[55%] bg-cover"
-          src="../Mflux/assets/Screenshot_2023-01-19_120707-removebg-preview.png"
+          src="./assets/Frame 27.png"
           alt=""
-        />
+        /></div>
+         <div>
+          <img src="./assets/©2022 Mflux.png" alt="" class="img2 ml-[55%] bg-cover mt-[30px]">
+        </div>
       </div>
       <div class="text-[34px] mr-[130px] mt-[30px]">
         <i class="fa-brands fa-facebook-f p-[15px]"></i>
